Corrected some issues with IntentHandler